add mlvm tests of vmTestbase.